name:                notes 
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/damienstanton/haskell-notes#readme
license:             MIT
license-file:        LICENSE
author:              Damien Stanton
maintainer:          damien.stanton@gmail.com
copyright:           2018 Damien Stanton
category:            Learning
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable intro
  hs-source-dirs:      src
  main-is:             Notes.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
